# PedalBOM

./: .gitignore  README.md  pyproject.toml
skills/pedalbom/: SKILL.md
skills/pedalbom-extractor/: SKILL.md
src/pedalbom/: __init__.py  adapter.py  cli.py  models.py  mouser.py  parser.py  pdf_extract.py  schema.py
src/pedalbom/schema/: bom.schema.json
tests/: test_mouser.py  test_parser.py  test_schema.py
